--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="cabecalho">
+        <h1>Taekwondo</h1>
+    </nav>
+    <div class="titulo1"><h1>Regras</h1></div>
 </body>
 </html>
