--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,8 @@
     <nav class="cabecalho">
         <h1>Taekwondo</h1>
     </nav>
-    <div class="titulo1"><h1>Regras</h1></div>
+    <div class="regras"><input type="checkbox" id="checRegras"> <label for="checRegras"><h1> Regras </h1></label><div class="seta"></div>
+        <div class="conteudo">gjhgkyugvggjfcfjcftmhg</div>
+    </div>
 </body>
 </html>
