--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,13 @@
     <nav class="cabecalho">
         <h1>Taekwondo</h1>
     </nav>
-    <div class="regras"><input type="checkbox" id="checRegras"> <label for="checRegras"><h1> Regras </h1></label><div class="seta"></div>
-        <div class="conteudo">gjhgkyugvggjfcfjcftmhg</div>
-    </div>
+    <details>
+        <summary>
+            Regras
+        </summary>
+        <p>
+            hjwhrifbeuy
+        </p>
+    </details>
 </body>
 </html>
