--- a/Index.html
+++ b/Index.html
@@ -15,8 +15,28 @@
             Regras
         </summary>
         <p>
-            hjwhrifbeuy
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, adipisci ipsum possimus ullam molestiae voluptatibus fugiat. Sed accusamus iure quod reprehenderit nam? Iusto, corrupti velit placeat soluta eligendi quos ratione.
         </p>
     </details>
+
+    <div class="carrossel">
+        <div class="imagens">
+            <img src="taekwondo.jfif" alt="Imagem 1">
+            <img src="ronaldo.jfif" alt="Imagem 2">
+            <img src="taekwondo.jfif" alt="Imagem 3">
+        </div>
+        <button class="prev" onclick="mudarImagem(-1)">&#10094;</button>
+        <button class="next" onclick="mudarImagem(1)">&#10095;</button>
+    </div>
+
+    <script src="script.js"></script>
+
+    <nav class="rodape">
+    <footer>
+        <p>
+            Copyright ©
+        </p>
+    </footer>
+    </nav>
 </body>
 </html>
